--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.14",
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "redis": "^4.7.0",
     "socket.io": "^4.6.2",
