--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "scripts.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,17 @@
     "redis": "^4.7.0",
     "socket.io": "^4.6.2",
     "tailwindcss": "^4.0.14"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "cypress": "^14.2.1",
+    "ioredis-mock": "^8.9.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
+    "msw": "^2.7.3",
+    "socket.io-client": "^4.8.1",
+    "supertest": "^7.1.0"
   }
 }
