--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
+    "js-base64": "^3.7.7",
     "redis": "^4.7.0",
     "socket.io": "^4.6.2",
     "zod": "^3.24.4"
