--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "redis": "^4.7.0",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "wav": "^1.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.0.14",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "cypress": "^14.2.1",
@@ -29,7 +30,6 @@
     "msw": "^2.7.3",
     "socket.io-client": "^4.8.1",
     "supertest": "^7.1.0",
-    "@tailwindcss/cli": "^4.0.14",
     "tailwindcss": "^4.0.14"
   }
 }
