--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
     "js-base64": "^3.7.7",
+    "node-fetch": "^3.3.2",
     "redis": "^4.7.0",
     "socket.io": "^4.6.2",
     "zod": "^3.24.4"
